SysY.output
Terminals unused in grammar

   CHAR
   SWITCH
   CASE
   COLON
   STRING
   CHARACTER


State 170 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: CompUnit

    2 CompUnit: CompUnit Decl
    3         | CompUnit FuncDef
    4         | Decl
    5         | FuncDef

    6 Decl: ConstDecl
    7     | VarDecl

    8 ConstDecl: CONST BType ConstDefList SEMICOLON

    9 ConstDefList: ConstDefList COMMA ConstDef
   10             | ConstDef

   11 BType: INT

   12 ConstDef: Ident ASSIGNMENT ConstExp
   13         | Ident ConstSubscripts ASSIGNMENT ConstInitVal

   14 ConstSubscripts: ConstSubscripts L_BRACKETS ConstExp R_BRACKETS
   15                | L_BRACKETS ConstExp R_BRACKETS

   16 ConstInitVal: L_BRACE ConstInitValList R_BRACE
   17             | L_BRACE R_BRACE

   18 ConstInitValList: ConstInitValList COMMA ConstInitVal
   19                 | ConstInitValList COMMA ConstExp
   20                 | ConstInitVal
   21                 | ConstExp

   22 VarDecl: BType VarDefList SEMICOLON

   23 VarDefList: VarDefList COMMA VarDef
   24           | VarDef

   25 VarDef: Ident
   26       | Ident ASSIGNMENT Exp
   27       | Ident ConstSubscripts
   28       | Ident ConstSubscripts ASSIGNMENT InitVal

   29 InitVal: L_BRACE InitValList R_BRACE
   30        | L_BRACE R_BRACE

   31 InitValList: InitValList COMMA Exp
   32            | InitValList COMMA InitVal
   33            | Exp
   34            | InitVal

   35 FuncDef: VOID Ident L_PARENTHESIS FuncFParams R_PARENTHESIS Block
   36        | VOID Ident L_PARENTHESIS R_PARENTHESIS Block
   37        | BType Ident L_PARENTHESIS FuncFParams R_PARENTHESIS Block
   38        | BType Ident L_PARENTHESIS R_PARENTHESIS Block

   39 FuncFParams: FuncFParams COMMA FuncFParam
   40            | FuncFParam

   41 FuncFParam: BType Ident
   42           | BType Ident ExpSubscripts

   43 ExpSubscripts: ExpSubscripts L_BRACKETS Exp R_BRACKETS
   44              | L_BRACKETS R_BRACKETS
   45              | L_BRACKETS Exp R_BRACKETS

   46 Block: L_BRACE BlockItem R_BRACE
   47      | L_BRACE R_BRACE

   48 BlockItem: BlockItem Decl
   49          | BlockItem Stmt
   50          | Decl
   51          | Stmt

   52 Stmt: LVal ASSIGNMENT Exp SEMICOLON
   53     | Exp SEMICOLON
   54     | SEMICOLON
   55     | Block
   56     | IF L_PARENTHESIS Cond R_PARENTHESIS Stmt
   57     | IF L_PARENTHESIS Cond R_PARENTHESIS Stmt ELSE Stmt
   58     | WHILE L_PARENTHESIS Cond R_PARENTHESIS Stmt
   59     | BREAK SEMICOLON
   60     | CONTINUE SEMICOLON
   61     | RETURN Exp SEMICOLON
   62     | RETURN SEMICOLON

   63 FuncRParams: FuncRParams COMMA Exp
   64            | Exp

   65 LVal: Ident
   66     | LVal L_BRACKETS Exp R_BRACKETS

   67 Cond: Exp RelOp Exp
   68     | L_PARENTHESIS Cond R_PARENTHESIS
   69     | NOT Cond
   70     | Cond AND Cond
   71     | Cond OR Cond

   72 RelOp: EQ
   73      | NE
   74      | LT
   75      | LE
   76      | GT
   77      | GE

   78 addOp: ADD
   79      | SUB

   80 mulOp: MUL
   81      | DIV
   82      | MOD

   83 UnaryOp: ADD
   84        | SUB

   85 Exp: Exp addOp Exp
   86    | Exp mulOp Exp
   87    | UnaryOp Exp
   88    | L_PARENTHESIS Exp R_PARENTHESIS
   89    | LVal
   90    | Ident L_PARENTHESIS FuncRParams R_PARENTHESIS
   91    | Number

   92 ConstExp: Exp

   93 Number: INTEGER

   94 Ident: ID


Terminals, with rules where they appear

$end (0) 0
error (256)
ADD (258) 78 83
SUB (259) 79 84
MUL (260) 80
DIV (261) 81
MOD (262) 82
LT (263) 74
LE (264) 75
GT (265) 76
GE (266) 77
NOT (267) 69
AND (268) 70
OR (269) 71
EQ (270) 72
NE (271) 73
ASSIGNMENT (272) 12 13 26 28 52
CONST (273) 8
INT (274) 11
CHAR (275)
VOID (276) 35 36
IF (277) 56 57
ELSE (278) 57
WHILE (279) 58
SWITCH (280)
CASE (281)
RETURN (282) 61 62
BREAK (283) 59
CONTINUE (284) 60
COMMA (285) 9 18 19 23 31 32 39 63
SEMICOLON (286) 8 22 52 53 54 59 60 61 62
COLON (287)
L_PARENTHESIS (288) 35 36 37 38 56 57 58 68 88 90
R_PARENTHESIS (289) 35 36 37 38 56 57 58 68 88 90
L_BRACKETS (290) 14 15 43 44 45 66
R_BRACKETS (291) 14 15 43 44 45 66
L_BRACE (292) 16 17 29 30 46 47
R_BRACE (293) 16 17 29 30 46 47
ID (294) 94
INTEGER (295) 93
STRING (296)
CHARACTER (297)
UAddOp (298)
UMulOp (299)
UUnary (300)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
CompUnit (48)
    on left: 2 3 4 5, on right: 1 2 3
Decl (49)
    on left: 6 7, on right: 2 4 48 50
ConstDecl (50)
    on left: 8, on right: 6
ConstDefList (51)
    on left: 9 10, on right: 8 9
BType (52)
    on left: 11, on right: 8 22 37 38 41 42
ConstDef (53)
    on left: 12 13, on right: 9 10
ConstSubscripts (54)
    on left: 14 15, on right: 13 14 27 28
ConstInitVal (55)
    on left: 16 17, on right: 13 18 20
ConstInitValList (56)
    on left: 18 19 20 21, on right: 16 18 19
VarDecl (57)
    on left: 22, on right: 7
VarDefList (58)
    on left: 23 24, on right: 22 23
VarDef (59)
    on left: 25 26 27 28, on right: 23 24
InitVal (60)
    on left: 29 30, on right: 28 32 34
InitValList (61)
    on left: 31 32 33 34, on right: 29 31 32
FuncDef (62)
    on left: 35 36 37 38, on right: 3 5
FuncFParams (63)
    on left: 39 40, on right: 35 37 39
FuncFParam (64)
    on left: 41 42, on right: 39 40
ExpSubscripts (65)
    on left: 43 44 45, on right: 42 43
Block (66)
    on left: 46 47, on right: 35 36 37 38 55
BlockItem (67)
    on left: 48 49 50 51, on right: 46 48 49
Stmt (68)
    on left: 52 53 54 55 56 57 58 59 60 61 62, on right: 49 51 56 57
    58
FuncRParams (69)
    on left: 63 64, on right: 63 90
LVal (70)
    on left: 65 66, on right: 52 66 89
Cond (71)
    on left: 67 68 69 70 71, on right: 56 57 58 68 69 70 71
RelOp (72)
    on left: 72 73 74 75 76 77, on right: 67
addOp (73)
    on left: 78 79, on right: 85
mulOp (74)
    on left: 80 81 82, on right: 86
UnaryOp (75)
    on left: 83 84, on right: 87
Exp (76)
    on left: 85 86 87 88 89 90 91, on right: 26 31 33 43 45 52 53 61
    63 64 66 67 85 86 87 88 92
ConstExp (77)
    on left: 92, on right: 12 14 15 19 21
Number (78)
    on left: 93, on right: 91
Ident (79)
    on left: 94, on right: 12 13 25 26 27 28 35 36 37 38 41 42 65 90


state 0

    0 $accept: . program $end

    CONST  shift, and go to state 1
    INT    shift, and go to state 2
    VOID   shift, and go to state 3

    program    go to state 4
    CompUnit   go to state 5
    Decl       go to state 6
    ConstDecl  go to state 7
    BType      go to state 8
    VarDecl    go to state 9
    FuncDef    go to state 10


state 1

    8 ConstDecl: CONST . BType ConstDefList SEMICOLON

    INT  shift, and go to state 2

    BType  go to state 11


state 2

   11 BType: INT .

    $default  reduce using rule 11 (BType)


state 3

   35 FuncDef: VOID . Ident L_PARENTHESIS FuncFParams R_PARENTHESIS Block
   36        | VOID . Ident L_PARENTHESIS R_PARENTHESIS Block

    ID  shift, and go to state 12

    Ident  go to state 13


state 4

    0 $accept: program . $end

    $end  shift, and go to state 14


state 5

    1 program: CompUnit .
    2 CompUnit: CompUnit . Decl
    3         | CompUnit . FuncDef

    CONST  shift, and go to state 1
    INT    shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (program)

    Decl       go to state 15
    ConstDecl  go to state 7
    BType      go to state 8
    VarDecl    go to state 9
    FuncDef    go to state 16


state 6

    4 CompUnit: Decl .

    $default  reduce using rule 4 (CompUnit)


state 7

    6 Decl: ConstDecl .

    $default  reduce using rule 6 (Decl)


state 8

   22 VarDecl: BType . VarDefList SEMICOLON
   37 FuncDef: BType . Ident L_PARENTHESIS FuncFParams R_PARENTHESIS Block
   38        | BType . Ident L_PARENTHESIS R_PARENTHESIS Block

    ID  shift, and go to state 12

    VarDefList  go to state 17
    VarDef      go to state 18
    Ident       go to state 19


state 9

    7 Decl: VarDecl .

    $default  reduce using rule 7 (Decl)


state 10

    5 CompUnit: FuncDef .

    $default  reduce using rule 5 (CompUnit)


state 11

    8 ConstDecl: CONST BType . ConstDefList SEMICOLON

    ID  shift, and go to state 12

    ConstDefList  go to state 20
    ConstDef      go to state 21
    Ident         go to state 22


state 12

   94 Ident: ID .

    $default  reduce using rule 94 (Ident)


state 13

   35 FuncDef: VOID Ident . L_PARENTHESIS FuncFParams R_PARENTHESIS Block
   36        | VOID Ident . L_PARENTHESIS R_PARENTHESIS Block

    L_PARENTHESIS  shift, and go to state 23


state 14

    0 $accept: program $end .

    $default  accept


state 15

    2 CompUnit: CompUnit Decl .

    $default  reduce using rule 2 (CompUnit)


state 16

    3 CompUnit: CompUnit FuncDef .

    $default  reduce using rule 3 (CompUnit)


state 17

   22 VarDecl: BType VarDefList . SEMICOLON
   23 VarDefList: VarDefList . COMMA VarDef

    COMMA      shift, and go to state 24
    SEMICOLON  shift, and go to state 25


state 18

   24 VarDefList: VarDef .

    $default  reduce using rule 24 (VarDefList)


state 19

   25 VarDef: Ident .
   26       | Ident . ASSIGNMENT Exp
   27       | Ident . ConstSubscripts
   28       | Ident . ConstSubscripts ASSIGNMENT InitVal
   37 FuncDef: BType Ident . L_PARENTHESIS FuncFParams R_PARENTHESIS Block
   38        | BType Ident . L_PARENTHESIS R_PARENTHESIS Block

    ASSIGNMENT     shift, and go to state 26
    L_PARENTHESIS  shift, and go to state 27
    L_BRACKETS     shift, and go to state 28

    $default  reduce using rule 25 (VarDef)

    ConstSubscripts  go to state 29


state 20

    8 ConstDecl: CONST BType ConstDefList . SEMICOLON
    9 ConstDefList: ConstDefList . COMMA ConstDef

    COMMA      shift, and go to state 30
    SEMICOLON  shift, and go to state 31


state 21

   10 ConstDefList: ConstDef .

    $default  reduce using rule 10 (ConstDefList)


state 22

   12 ConstDef: Ident . ASSIGNMENT ConstExp
   13         | Ident . ConstSubscripts ASSIGNMENT ConstInitVal

    ASSIGNMENT  shift, and go to state 32
    L_BRACKETS  shift, and go to state 28

    ConstSubscripts  go to state 33


state 23

   35 FuncDef: VOID Ident L_PARENTHESIS . FuncFParams R_PARENTHESIS Block
   36        | VOID Ident L_PARENTHESIS . R_PARENTHESIS Block

    INT            shift, and go to state 2
    R_PARENTHESIS  shift, and go to state 34

    BType        go to state 35
    FuncFParams  go to state 36
    FuncFParam   go to state 37


state 24

   23 VarDefList: VarDefList COMMA . VarDef

    ID  shift, and go to state 12

    VarDef  go to state 38
    Ident   go to state 39


state 25

   22 VarDecl: BType VarDefList SEMICOLON .

    $default  reduce using rule 22 (VarDecl)


state 26

   26 VarDef: Ident ASSIGNMENT . Exp

    ADD            shift, and go to state 40
    SUB            shift, and go to state 41
    L_PARENTHESIS  shift, and go to state 42
    ID             shift, and go to state 12
    INTEGER        shift, and go to state 43

    LVal     go to state 44
    UnaryOp  go to state 45
    Exp      go to state 46
    Number   go to state 47
    Ident    go to state 48


state 27

   37 FuncDef: BType Ident L_PARENTHESIS . FuncFParams R_PARENTHESIS Block
   38        | BType Ident L_PARENTHESIS . R_PARENTHESIS Block

    INT            shift, and go to state 2
    R_PARENTHESIS  shift, and go to state 49

    BType        go to state 35
    FuncFParams  go to state 50
    FuncFParam   go to state 37


state 28

   15 ConstSubscripts: L_BRACKETS . ConstExp R_BRACKETS

    ADD            shift, and go to state 40
    SUB            shift, and go to state 41
    L_PARENTHESIS  shift, and go to state 42
    ID             shift, and go to state 12
    INTEGER        shift, and go to state 43

    LVal      go to state 44
    UnaryOp   go to state 45
    Exp       go to state 51
    ConstExp  go to state 52
    Number    go to state 47
    Ident     go to state 48


state 29

   14 ConstSubscripts: ConstSubscripts . L_BRACKETS ConstExp R_BRACKETS
   27 VarDef: Ident ConstSubscripts .
   28       | Ident ConstSubscripts . ASSIGNMENT InitVal

    ASSIGNMENT  shift, and go to state 53
    L_BRACKETS  shift, and go to state 54

    $default  reduce using rule 27 (VarDef)


state 30

    9 ConstDefList: ConstDefList COMMA . ConstDef

    ID  shift, and go to state 12

    ConstDef  go to state 55
    Ident     go to state 22


state 31

    8 ConstDecl: CONST BType ConstDefList SEMICOLON .

    $default  reduce using rule 8 (ConstDecl)


state 32

   12 ConstDef: Ident ASSIGNMENT . ConstExp

    ADD            shift, and go to state 40
    SUB            shift, and go to state 41
    L_PARENTHESIS  shift, and go to state 42
    ID             shift, and go to state 12
    INTEGER        shift, and go to state 43

    LVal      go to state 44
    UnaryOp   go to state 45
    Exp       go to state 51
    ConstExp  go to state 56
    Number    go to state 47
    Ident     go to state 48


state 33

   13 ConstDef: Ident ConstSubscripts . ASSIGNMENT ConstInitVal
   14 ConstSubscripts: ConstSubscripts . L_BRACKETS ConstExp R_BRACKETS

    ASSIGNMENT  shift, and go to state 57
    L_BRACKETS  shift, and go to state 54


state 34

   36 FuncDef: VOID Ident L_PARENTHESIS R_PARENTHESIS . Block

    L_BRACE  shift, and go to state 58

    Block  go to state 59


state 35

   41 FuncFParam: BType . Ident
   42           | BType . Ident ExpSubscripts

    ID  shift, and go to state 12

    Ident  go to state 60


state 36

   35 FuncDef: VOID Ident L_PARENTHESIS FuncFParams . R_PARENTHESIS Block
   39 FuncFParams: FuncFParams . COMMA FuncFParam

    COMMA          shift, and go to state 61
    R_PARENTHESIS  shift, and go to state 62


state 37

   40 FuncFParams: FuncFParam .

    $default  reduce using rule 40 (FuncFParams)


state 38

   23 VarDefList: VarDefList COMMA VarDef .

    $default  reduce using rule 23 (VarDefList)


state 39

   25 VarDef: Ident .
   26       | Ident . ASSIGNMENT Exp
   27       | Ident . ConstSubscripts
   28       | Ident . ConstSubscripts ASSIGNMENT InitVal

    ASSIGNMENT  shift, and go to state 26
    L_BRACKETS  shift, and go to state 28

    $default  reduce using rule 25 (VarDef)

    ConstSubscripts  go to state 29


state 40

   83 UnaryOp: ADD .

    $default  reduce using rule 83 (UnaryOp)


state 41

   84 UnaryOp: SUB .

    $default  reduce using rule 84 (UnaryOp)


state 42

   88 Exp: L_PARENTHESIS . Exp R_PARENTHESIS

    ADD            shift, and go to state 40
    SUB            shift, and go to state 41
    L_PARENTHESIS  shift, and go to state 42
    ID             shift, and go to state 12
    INTEGER        shift, and go to state 43

    LVal     go to state 44
    UnaryOp  go to state 45
    Exp      go to state 63
    Number   go to state 47
    Ident    go to state 48


state 43

   93 Number: INTEGER .

    $default  reduce using rule 93 (Number)


state 44

   66 LVal: LVal . L_BRACKETS Exp R_BRACKETS
   89 Exp: LVal .

    L_BRACKETS  shift, and go to state 64

    $default  reduce using rule 89 (Exp)


state 45

   87 Exp: UnaryOp . Exp

    ADD            shift, and go to state 40
    SUB            shift, and go to state 41
    L_PARENTHESIS  shift, and go to state 42
    ID             shift, and go to state 12
    INTEGER        shift, and go to state 43

    LVal     go to state 44
    UnaryOp  go to state 45
    Exp      go to state 65
    Number   go to state 47
    Ident    go to state 48


state 46

   26 VarDef: Ident ASSIGNMENT Exp .
   85 Exp: Exp . addOp Exp
   86    | Exp . mulOp Exp

    ADD  shift, and go to state 66
    SUB  shift, and go to state 67
    MUL  shift, and go to state 68
    DIV  shift, and go to state 69
    MOD  shift, and go to state 70

    $default  reduce using rule 26 (VarDef)

    addOp  go to state 71
    mulOp  go to state 72


state 47

   91 Exp: Number .

    $default  reduce using rule 91 (Exp)


state 48

   65 LVal: Ident .
   90 Exp: Ident . L_PARENTHESIS FuncRParams R_PARENTHESIS

    L_PARENTHESIS  shift, and go to state 73

    $default  reduce using rule 65 (LVal)


state 49

   38 FuncDef: BType Ident L_PARENTHESIS R_PARENTHESIS . Block

    L_BRACE  shift, and go to state 58

    Block  go to state 74


state 50

   37 FuncDef: BType Ident L_PARENTHESIS FuncFParams . R_PARENTHESIS Block
   39 FuncFParams: FuncFParams . COMMA FuncFParam

    COMMA          shift, and go to state 61
    R_PARENTHESIS  shift, and go to state 75


state 51

   85 Exp: Exp . addOp Exp
   86    | Exp . mulOp Exp
   92 ConstExp: Exp .

    ADD  shift, and go to state 66
    SUB  shift, and go to state 67
    MUL  shift, and go to state 68
    DIV  shift, and go to state 69
    MOD  shift, and go to state 70

    $default  reduce using rule 92 (ConstExp)

    addOp  go to state 71
    mulOp  go to state 72


state 52

   15 ConstSubscripts: L_BRACKETS ConstExp . R_BRACKETS

    R_BRACKETS  shift, and go to state 76


state 53

   28 VarDef: Ident ConstSubscripts ASSIGNMENT . InitVal

    L_BRACE  shift, and go to state 77

    InitVal  go to state 78


state 54

   14 ConstSubscripts: ConstSubscripts L_BRACKETS . ConstExp R_BRACKETS

    ADD            shift, and go to state 40
    SUB            shift, and go to state 41
    L_PARENTHESIS  shift, and go to state 42
    ID             shift, and go to state 12
    INTEGER        shift, and go to state 43

    LVal      go to state 44
    UnaryOp   go to state 45
    Exp       go to state 51
    ConstExp  go to state 79
    Number    go to state 47
    Ident     go to state 48


state 55
